docs/matrixlabs/receipts/receipt_20260628_095023.txt
MLBLOCK_RECEIPT_START
timestamp=20260628_095023
receipt_file=/home/asd/matrixlab_receipts/receipt_20260628_095023.txt

REVIEW_C8_SUCCESSOR_SURFACE_BOUNDED_REUSE_AUTHORITY_PROBE_RESULT_V0

VERIFY_BOUNDED_REUSE_AUTHORITY_PROBE_ARTIFACTS_PRESENT
present data/c8_successor_surface_bounded_reuse_authority_probe_v0_receipts/c8_successor_reuse_authority_probe_receipt_803165de.json
present data/c8_successor_surface_bounded_reuse_authority_probe_v0/c8_successor_surface_bounded_reuse_authority_probe_evidence_v0.json
present data/c8_successor_surface_bounded_reuse_authority_probe_v0/c8_successor_surface_bounded_reuse_authority_probe_result_v0.json
present data/c8_successor_surface_bounded_reuse_authority_probe_v0/c8_successor_surface_bounded_reuse_authority_probe_boundary_audit_v0.json
present data/c8_successor_surface_bounded_reuse_authority_probe_v0/c8_successor_surface_bounded_reuse_authority_probe_readout_v0.json
present data/c8_successor_surface_bounded_reuse_authority_probe_v0/c8_successor_surface_bounded_reuse_authority_probe_report.json
present scripts/execute_c8_successor_surface_bounded_reuse_authority_probe_v0.py

PY_COMPILE_BOUNDED_REUSE_AUTHORITY_PROBE_RUNNER

VERIFY_BOUNDED_REUSE_AUTHORITY_PROBE_RECEIPT
  File "<stdin>", line 65
    "for "next_command_goal": None,
                           ^
SyntaxError: unterminated string literal (detected at line 65)

MLBLOCK_EXIT_CODE=1
MLBLOCK_RECEIPT_END
